--- a/docker/devenv/files/nginx.conf
+++ b/docker/devenv/files/nginx.conf
@@ -56,7 +56,7 @@ http {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        resolver 8.8.8.8;
+        resolver 127.0.0.11;
 
         etag off;
 
@@ -67,8 +67,6 @@ http {
             set $redirect_host "$upstream_http_x_host";
             set $redirect_cache_control "$upstream_http_cache_control";
 
-            proxy_buffering off;
-
             proxy_set_header Host "$redirect_host";
             proxy_hide_header etag;
             proxy_hide_header x-amz-id-2;
@@ -77,9 +75,9 @@ http {
             proxy_hide_header x-amz-server-side-encryption;
             proxy_pass $redirect_uri;
 
-            add_header x-internal-redirect "$redirect_uri";
-            add_header x-cache-control "$redirect_cache_control";
-            add_header cache-control "$redirect_cache_control";
+            #add_header x-internal-redirect "$redirect_uri";
+            #add_header x-cache-control "$redirect_cache_control";
+            #add_header cache-control "$redirect_cache_control";
         }
 
         location /assets {
